Antes de modificar busqueda de entidades
